Fixed Overflow

--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,7 @@ color: rgba(255, 255, 255, 0.662)
   }
   body{
     padding: 0 30px;
+    overflow-x: hidden;
   }
 .header{
   padding: 30px 0;
